--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots" id="lots-section">
@@ -59,9 +59,9 @@
             <a class="card-link" href="">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <h4 class="card__title">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h4>
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -74,9 +74,9 @@
             <a class="card-link" href="">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <h4 class="card__title">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h4>
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -92,9 +92,9 @@
             <a class="card-link" href="">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <h4 class="card__title">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h4>
+                </h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -107,14 +107,16 @@
         </ul>
         <a class="lots__look-more-link" href="">посмотреть больше</a>
       </section>
-
       <section class="about" id="about-section">
         <div class="about__logo">
-          <img class="about__logo-image" src="./images/logo-white.svg" alt="логотип белый" />
+          <img
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            alt="логотип белый"
+          />
         </div>
-
         <article class="about__column">
-          <h3 class="about__title">Об аукционе</h3>
+          <h4 class="about__title">Об аукционе</h4>
           <div class="about__text-container">
             <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно
@@ -136,7 +138,6 @@
         </article>
       </section>
     </main>
-
     <footer class="footer">
       <address class="address footer__address">
         <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
@@ -151,35 +152,41 @@
             >
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#lots-section">посмотреть лоты</a>
+            <a class="footer__menu-link" href="#lots-section"
+              >посмотреть лоты</a
+            >
           </li>
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#about-section">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <div class="footer__social">
-        <ul class="footer__social-list">
-          <li class="footer__social-list-item">
-            <a href="https://www.youtube.com"
-              ><img class="footer__social-icon" src="./images/yt.svg" alt="иконка ютуба"
-            /></a>
-          </li>
-          <li class="footer__social-list-item">
-            <a href="https://vk.com/"
-              ><img class="footer__social-icon" src="./images/vk.svg" alt="иконка ВК"
-            /></a>
-          </li>
-          <li class="footer__social-list-item">
-            <a href="https://www.pinterest.com/"
-              ><img
-                class="footer__social-icon"
-                src="./images/pinterest.svg"
-                alt="иконка Пинтреста"
-            /></a>
-          </li>
-        </ul>
-      </div>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a href="https://www.youtube.com"
+            ><img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="иконка ютуба"
+          /></a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="https://vk.com/"
+            ><img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="иконка ВК"
+          /></a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="https://www.pinterest.com/"
+            ><img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="иконка Пинтреста"
+          /></a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
